# kepler2-wgpu

./: .gitignore  AGENTS.md  CLINE.md  Cargo.toml  PYTHON.PY  README.md  output_mesh_mt.mtl  package.json  pkg.7z  remedy.rs
.github/: copilot-instructions.md
.github/workflows/: coverage-gate.yml  coverage.yml  release.yml
.trae/documents/: Aspect-Ratio Safe TSC Rendering (MPR_MIP).md
.trae/rules/: project_rules.md
doc/: 2025-01-11T14-15-00Z-mip-implementation-strategy.md  2025-01-11T16-30-00Z-mip-view-bottom-right-integration.md  2025-01-11T20-30-00Z-mip-mvp-completion-report.md  2025-01-11T21-30-00Z-mip-rendering-fix.md  2025-10-11T00-00-00Z-mip-uniforms-initialization-fix.md  2025-10-12T09-00-58-mip-rendering-implementation-summary.md  2025-10-12T14-30-00-codebase-analysis-and-improvement-recommendations.md  2025-10-12T15-00-00-implementation-suggestions.md  2025-10-28T07-54-10-wgpu-27-winit-030-upgrade-plan.md  2025-10-28T08-25-41-wasm-view-manipulation-api-design.md  3d-mesh-design.md  3d-mesh-implementation-plan.md  CHANGELOG.md  CODE_REVIEW_20251217.md  PRODUCT_REQUIREMENTS_DOCUMENT.md  basic-mesh-rendering.md  buffer-lifecycle-fix.md  dynamic-mesh-view-swap-implementation-plan.md  float-volume-texture-plan.md  generate_ct_volume_common_suggestions.md  layout-improvements.md  mesh-depth-texture-zero-dimension-fix.md  mesh-rotation-functionality.md  mesh-view-implementation-plan.md  mha-mhd-architecture.md  mvp-status-report.md  obj-loading-and-rendering-architecture.md  orthogonal-projection-implementation.md  pipeline-manager-integration-plan.md  render-architecture-design.md  rendering-architecture-design.md  state-simplification.md  test_matrix.csv  wasm-stale-renderpipeline-analysis.md
doc/acquisition/: remedy-serial-web.md
doc/agents/: ARCHITECTURE.md  BUILD.md  CONVENTIONS.md  OPENSPEC.md  PITFALLS.md  PR_GUIDELINES.md  QUICK_REFERENCE.md  README.md  RENDERING.md  coverage_methodology.md  gpu_testing_strategy.md  memory_testing_strategy.md  property_testing_strategy.md  regression_testing_guide.md  test_fixture_architecture.md  test_implementation_plan.md  test_strategy_comprehensive.md  wasm_testing_strategy.md
doc/application/: app-architecture-review.md
doc/architecture/: 2025-11-11T12-32-33-app-model-refactoring-plan.md  ARCHITECTURE.md  source-code-reorganization-plan.md
doc/redering/: float-volume-texture-plan.md  (+6 more)
openspec/: project.md
scripts/: check_coverage_regression.sh  coverage.sh
src/: README.md  coord.rs  ct_volume.rs  dicom_io.rs  error.rs  geometry.rs  gl_canvas.rs  lib.rs  main.rs  pipeline.rs  pipeline_builder.rs  render_app.rs  render_content.rs  render_pass.rs  state.rs  timing.rs
static/: dicom.html  index.html  index_image.html  index_old.html  remedy.html  server.js  worker.js
tests/: coordinate_precision_tests.rs  coordinate_safety_tests.rs  debug_matrix.rs  dicom_metadata_validation_tests.rs  dicom_pixel_data_validation_tests.rs  dicom_tag_validation_tests.rs.disabled.bak  dicom_tests.rs  error_handling_tests.rs  gpu_safety_tests.rs  gpu_safety_tests.rs.skip  layout_aspect_fit.rs  medical_imaging_tests.rs  mesh_integration_tests.rs  mesh_view_tests.rs  mha_mhd_tests.rs  mip_basic_tests.rs  mip_uniforms_size_test.rs  mpr_view_integration_tests.rs  mpr_view_validation_tests.rs  patient_safety_tests.rs  performance_tests.rs  property_tests.rs.disabled  regression_tests.rs  rendering_correctness_tests.rs  robustness_tests.rs  rotation_matrix_tests.rs  state_helper_tests.rs  view_transition_integration_tests.rs  volume_integrity_tests.rs
(+248 files in other folders)
