[package]
name = "kepler-wgpu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
winit = { version = "0.29.15", features = ["rwh_05"] }
env_logger = "0.11.5"
log = "0.4"
wgpu = "23.0.0"
pollster = "0.4.0"
# data type cast
bytemuck = { version = "1.16", features = [ "derive" ] }
cfg-if = "1"
num = "0.4"

cgmath = "0.18"
anyhow = "1.0"
dicom-object = "0.8.2"
dicom-core = "0.8.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

futures = "0.3"

paste = "1.0"

once_cell = "1.7"    # used for singleton pattern
# async-std = "1.0"
async-lock = "3.4.1"
num-traits = "0.2.19"
half = "2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.47.1", features = ["full"] }
rayon = "1.11.0"

[dependencies.image]
version = "0.25.2"
default-features = false
features = ["png", "jpeg"]

# support the web
# the other regular dependencies...

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "23.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "File",
    "FileReader",
    "ProgressEvent"
]}
js-sys = "0.3.22"

[features]
# Default features remain empty to avoid enabling mesh inadvertently
default = []
# Opt-in 3D mesh feature gate
mesh = []

[[bin]]
name = "kepler"
path = "src/main.rs"
