[package]
name = "kepler-wgpu"
version = "0.5.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
winit = { version = "0.29.15", features = ["rwh_05"] }
env_logger = "0.11.5"
log = "0.4"
wgpu = "23.0.0"
pollster = "0.4.0"
# data type cast
bytemuck = { version = "1.16", features = [ "derive" ] }
cfg-if = "1"
num = "0.4"
glam = "0.30"
anyhow = "1.0"
dicom-object = "0.8.2"
dicom-core = "0.8.2"
dicom-dictionary-std = "0.8"

ndarray = "0.15"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18", default-features = false, features = ["v4"] }
sha1 = "0.10" 
chrono = "0.4"
byteorder = "1"

futures = "0.3"
wasm-bindgen-futures = "0.4.30"

paste = "1.0"

once_cell = "1.7"    # used for singleton pattern
# async-std = "1.0"
async-lock = "3.4.1"
num-traits = "0.2.19"
half = "2"
thiserror = "1.0"
async-trait = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid = { version = "1.18.1", features = ["rng-getrandom"] }
tokio = { version = "1.47.1", features = ["full"] }
rayon = "1.11.0"

[dependencies.image]
version = "0.25.2"
default-features = false
features = ["png", "jpeg"]

# support the web
# the other regular dependencies...

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "23.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "File",
    "FileReader",
    "ProgressEvent",
    "console"
 ]}
js-sys = "0.3.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18.1", features = ["js"] }
getrandom = { version = "0.2", features = ["js"] }

[features]
# Default features remain empty
default = []
trace-logging = []

[[bin]]
name = "kepler"
path = "src/main.rs"
